@@ -2,7 +2,7 @@
 # Kernel/System/TemplateGenerator.pm - generate salutations, signatures and responses
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: TemplateGenerator.pm,v 1.37 2009/11/26 12:23:09 bes Exp $
+# $Id: TemplateGenerator.pm,v 1.38 2009/12/08 19:30:18 mae Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -22,7 +22,7 @@ use Kernel::System::Notification;
 use Kernel::System::AutoResponse;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.37 $) [1];
+$VERSION = qw($Revision: 1.38 $) [1];
 
 =head1 NAME
 
@@ -437,6 +437,26 @@ sub Attributes {
 
     # get sender attributes
     my %Address = $Self->{QueueObject}->GetSystemAddress( QueueID => $Ticket{QueueID} );
+
+    # check config for agent real name
+    my $UseAgentRealName = $Self->{ConfigObject}->Get('Ticket::UseAgentRealNameForEmailFrom');
+    my $SenderSeparator
+        = $Self->{ConfigObject}->Get('Ticket::UseAgentRealNameForEmailFromSeparator');
+    if ( $UseAgentRealName && $SenderSeparator ) {
+
+        # get data from current agent
+        my %UserData = $Self->{UserObject}->GetUserData(
+            UserID => $Param{UserID},
+        );
+
+        # check for user data
+        if ( %UserData && $UserData{UserLastname} && $UserData{UserFirstname} ) {
+
+            # set real name with user name
+            $Address{RealName} =
+                "$UserData{UserFirstname} $UserData{UserLastname} $SenderSeparator $Address{RealName}";
+        }
+    }
 
     # prepare realname quote
     if ( $Address{RealName} =~ /(,|@|\(|\)|:)/ && $Address{RealName} !~ /^("|')/ ) {
@@ -1236,6 +1256,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.37 $ $Date: 2009/11/26 12:23:09 $
+$Revision: 1.38 $ $Date: 2009/12/08 19:30:18 $
 
 =cut
