@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1097 2009/12/08 17:22:30 mn Exp $
+# $Id: CHANGES,v 1.1098 2009/12/08 19:31:42 mae Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.5.0 beta1 (????/??/??)
+ - (2009/12/08) Fixed bug#1698 - Send emails with the real name from the agent.
  - (2009/12/08) Fixed bug#2153 - Recognize domain names only if they are words.
  - (2009/12/08) Fixed bug#4399 - Phone- / Email-Ticket AJAX reload does not
     consider ACL in Config.pm.
